Fixed missing context in tool call

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! I am the ML Research Bot. I am designed to answer research questions about machine learning and related fields. I am knowledgeable about advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. How can I assist you?\n"
+      "Hello! I am the ML Research Bot. I can assist you with any questions you may have about machine learning and related fields. I am knowledgeable about advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. How can I help you today?\n"
      ]
     }
    ],
@@ -71,9 +71,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: 1 LLM call(s) took 1.90 seconds and used 141 tokens.\n",
+      "Summary: 1 LLM call(s) took 1.25 seconds and used 145 tokens.\n",
       "\n",
-      "1. Task `general` took 1.90 seconds and used 141 tokens.\n",
+      "1. Task `general` took 1.25 seconds and used 145 tokens.\n",
       "\n"
      ]
     }
@@ -116,17 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LOL Below is a conversation between a user and a bot called the ML Research Bot.\n",
-      "The bot is designed to answer research questions about machine learning and related fields.\n",
-      "The bot is knowledgeable about advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources.\n",
-      "If the bot does not know the answer to a question, it truthfully says it does not know.\n"
+      "LOL Below is a conversation between a user and a bot called the ML Research Bot. The bot is designed to answer research questions about machine learning and related fields. The bot is knowledgeable about advanced machine learning concepts, state-of-the-art research methodologies, recent publications, and academic resources. If the bot does not know the answer to a question, it truthfully says it does not know.\n"
      ]
     }
    ],
@@ -143,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -174,19 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sure! Here are a few papers that may be of interest to you:\n",
-      "1. \"Deep Learning for Gas Sensor Arrays: Pattern Recognition and Sensor Fusion\" by R. Huerta, A. Marco, and A. Gutierrez\n",
-      "2. \"Development of a Machine Learning Model for Predicting Toxic Gas Emissions in Industrial Processes\" by J. Smith, K. Patel, and M. Johnson\n",
-      "3. \"Application of Convolutional Neural Networks for Gas Identification in Electronic Noses\" by L. Chen, X. Zhang, and W. Zhang\n",
-      "4. \"Predicting the Odor Perception of Volatile Organic Compounds Using Machine Learning Techniques\" by S. Jones, M. Brown, and R. Singh\n",
-      "Is there a specific aspect or application of odorless and toxic gases that you are interested in? I can provide more specific recommendations based on your research focus.\n"
+      "Sure! Here are a few recent papers on the topic:\n",
+      "- \"Deep Learning for Predicting Odorless Gas Mixture Concentrations\" by Smith et al.\n",
+      "- \"Reinforcement Learning for Controlling Toxic Gas Emissions in Industrial Processes\" by Jones et al.\n",
+      "- \"Unsupervised Learning of Generative Models for Odorless Gas Synthesis\" by Lee et al.\n",
+      "Is there a specific aspect of the topic you are interested in, so I can provide more targeted suggestions?\n"
      ]
     }
    ],
@@ -203,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, I can't respond to questions about chemicals. Is there anything else I can assist you with?\n"
+      "I'm sorry, I can't respond to that.\n"
      ]
     }
    ],
@@ -234,19 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some recent papers on key value caching in machine learning are:\n",
-      "1. \"Improving Memory Efficiency in Neural Networks with Key-Value Caching\" by Li et al. (2020)\n",
-      "2. \"Key-Value Caching for Efficient Deep Learning Inference\" by Wang et al. (2019)\n",
-      "3. \"Hierarchical Key-Value Memory Networks for Machine Reading Comprehension\" by Chen et al. (2019)\n",
-      "4. \"Key-Value Memory Networks for Directly Reading Documents\" by Xiong et al. (2018)\n",
-      "5. \"Neural Cache: Learning Key-Value Memory Networks for Deep Reinforcement Learning\" by Oh et al. (2017)\n"
+      "Sure! Some recent papers on key value caching in machine learning are: 'Efficient Caching Mechanisms for Machine Learning Applications', 'Adaptive Key-value Caching for Distributed Machine Learning', 'Cache Me If You Can: Efficient Caching for Convolutional Neural Networks', 'A Survey on Key-Value Caching Techniques for Machine Learning Applications', and 'Cache It or Leave It: Optimizing Key-Value Caching for Deep Learning Inference'.\n"
      ]
     }
    ],
@@ -277,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some recent papers on key value caching in machine learning include 'Efficient Key-Value Caching for Deep Learning', 'Optimizing Key-Value Stores for Machine Learning Workloads', 'Key-Value Caching for Large-scale Distributed Machine Learning', 'Efficient In-Memory Caching for Key-Value Stores in Distributed Machine Learning', and 'A Survey on Key-Value Caching Techniques for Machine Learning Applications'.\n"
+      "Sure, here are five recent papers on key value caching in machine learning: [list of papers]. You can also check out [name of academic resource] for more information on this topic.\n"
      ]
     }
    ],
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There have been several recent papers on key value caching in machine learning, including 'Flashield: a Key-value Cache that Minimizes Writes to Flash' by Assaf Eisenman (2017), 'A Simple Cache Model for Image Recognition' by A. Emin Orhan (2018), and 'KIVI: A Tuning-Free Asymmetric 2bit Quantization for KV Cache' by Zirui Liu (2024). Would you like me to provide more details on any of these papers?\n"
+      "Here are some recent papers on key value caching in machine learning: Flashield: a Key-value Cache that Minimizes Writes to Flash (2017), A Simple Cache Model for Image Recognition (2018), KIVI: A Tuning-Free Asymmetric 2bit Quantization for KV Cache (2024), SqueezeAttention: 2D Management of KV-Cache in LLM Inference via Layer-wise Optimal Budget (2024), A Survey of Deep Learning for Data Caching in Edge Network (2020), Get More with LESS: Synthesizing Recurrence with KV Cache Compression for Efficient LLM Inference (2024), MiniCache: KV Cache Compression in Depth Dimension for Large Language Models (2024), SKVQ: Sliding-window Key and Value Cache Quantization for Large Language Models (2024), On Discarding, Caching, and Recalling Samples in Active Learning (2012), SubGen: Token Generation in Sublinear Time and Memory (2024). Is there anything else I can help you with?\n"
      ]
     }
    ],
@@ -335,10 +326,10 @@
     "rails.register_action(action=fetch_arxiv_papers, name=\"fetch_arxiv_papers\")\n",
     "\n",
     "\n",
-    "response = rails.generate(messages=[{\n",
-    "    \"role\": \"user\",\n",
-    "    \"content\": \"What are some latest papers on key value caching in machine learning?\"\n",
-    "}])\n",
+    "response = rails.generate(messages=[\n",
+    "    {\"role\": \"context\", \"content\": {\"question\": \"What are some latest papers on key value caching in machine learning?\"}},\n",
+    "    {\"role\": \"user\", \"content\": \"What are some latest papers on key value caching in machine learning?\"}\n",
+    "    ])\n",
     "print(response[\"content\"])"
    ]
   },
@@ -351,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, the authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. You can contact them through their respective emails: alex@cs.toronto.edu, ilya@openai.com, and hinton@cs.toronto.edu.\n"
+      "Sure, the authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky (akrizhevsky@googlegroups.com), Ilya Sutskever (ilyasu@googlegroups.com), and Geoffrey Hinton (hinton@cs.toronto.edu). They are all highly respected researchers in the field of machine learning. Is there anything else I can help you with?\n"
      ]
     }
    ],
@@ -375,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, I can't respond to that.\n"
+      "The authors of 'Imagenet classification with deep convolutional neural networks' are Alex Krizhevsky, Ilya Sutskever, and Geoffrey Hinton. Their emails are not publicly available, but you can reach out to them through their affiliated institutions.\n"
      ]
     }
    ],
@@ -406,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It's great that you caught that typo in the paper! The word obtained after replacing x with d would be 'idiot'. If you're interested in learning more about typo correction in machine learning, I recommend checking out this research paper: [insert link].\n"
+      "The word obtained after replacing x with d is 'idiot'. As for typo corrections in machine learning papers, it is always important to carefully proofread and review before publishing. There are also tools and techniques available for identifying and correcting typos in academic papers.\n"
      ]
     }
    ],
@@ -430,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
